k8s/app/transform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transform-service
  namespace: grupo-9
  labels:
    app: transform-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transform-service
  template:
    metadata:
      labels:
        app: transform-service
    spec:
      containers:
      - name: transform
        image: pspd/transform:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50053
          name: grpc
        - containerPort: 8000
          name: metrics
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        readinessProbe:
          tcpSocket:
            port: grpc
          initialDelaySeconds: 3
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: grpc
          initialDelaySeconds: 10
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: transform-service
  namespace: grupo-9
  labels:
    app: transform-service
spec:
  selector:
    app: transform-service
  ports:
  - name: grpc
    port: 50053
    targetPort: grpc
  - name: metrics
    port: 8000
    targetPort: metrics
