k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: grupo-9
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: kiriland.unb.br
    http:
      paths:
      - path: /grupo9(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-service
            port:
              number: 3000
